调整修改成每台机器一个消费者组

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,8 @@ spring.redis.lettuce.pool.max-active=40
 spring.redis.lettuce.pool.min-idle=10
 
 # socketmq\u914D\u7F6E
-kafka.topic.socket.msg=topic_socket_msg
+im.message.kafka.socket.topic=topic_socket_sending_message
+im.message.kafka.socket.partitionNum=1
+im.message.kafka.socket.properties.bootstrap.servers=10.20.1.26:9092
+im.message.kafka.socket.properties.group.id=spring-websocket-{hostName}
+im.message.kafka.socket.properties.enable.auto.commit=true
