--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>2.1.13.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
+            <version>2.1.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
